[gd_scene load_steps=11 format=3 uid="uid://bgt44jcihba20"]

[ext_resource type="Script" path="res://Game V2/scripts/shop_slot.gd" id="1_6yx5e"]
[ext_resource type="Texture2D" uid="uid://bq535m8ds3si7" path="res://Game V2/Sprites/shop icon frame.png" id="2_h5ov4"]
[ext_resource type="Shader" path="res://Game V2/scripts/Shaders/color_swap.gdshader" id="2_m4ajv"]
[ext_resource type="Texture2D" uid="uid://bavc1h83ikbst" path="res://Game V2/Sprites/shop price sign.png" id="3_wpgb7"]
[ext_resource type="Script" path="res://Game V2/scripts/PriceSign.gd" id="5_sjwtl"]
[ext_resource type="Texture2D" uid="uid://cdod4whqbxlex" path="res://Game V2/Sprites/shop price sign hover frame.png" id="6_pww24"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0b4bc"]
shader = ExtResource("2_m4ajv")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ttcnm"]
size = Vector2(64, 64)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7khxr"]
shader = ExtResource("2_m4ajv")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_obn3w"]
shader = ExtResource("2_m4ajv")
shader_parameter/target_color_1 = null
shader_parameter/replace_color_1 = null
shader_parameter/target_color_2 = null
shader_parameter/replace_color_2 = null
shader_parameter/tolerance = null

[node name="ShopSlot" type="Node2D" node_paths=PackedStringArray("item_holder", "DOWN_NEIGHBOUR")]
script = ExtResource("1_6yx5e")
item_holder = NodePath("Item")
DOWN_NEIGHBOUR = NodePath("PriceSign")

[node name="IconFrame" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0b4bc")
texture = ExtResource("2_h5ov4")

[node name="Area2D" type="Area2D" parent="IconFrame"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IconFrame/Area2D"]
shape = SubResource("RectangleShape2D_ttcnm")

[node name="PriceSign" type="Sprite2D" parent="." node_paths=PackedStringArray("UP_NEIGHBOUR")]
material = SubResource("ShaderMaterial_7khxr")
position = Vector2(0, 45)
texture = ExtResource("3_wpgb7")
script = ExtResource("5_sjwtl")
UP_NEIGHBOUR = NodePath("..")

[node name="Area2D" type="Area2D" parent="PriceSign"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PriceSign/Area2D"]
position = Vector2(-2.98023e-07, -0.375)
scale = Vector2(1.125, 1.125)
polygon = PackedVector2Array(-30.2222, -7.66667, 30.2222, -7.66667, 27.5556, 13.6667, -27.5556, 13.6667)

[node name="Marker2D" type="Marker2D" parent="PriceSign"]
position = Vector2(0, 5)

[node name="HoverBorder" type="Sprite2D" parent="PriceSign"]
visible = false
material = SubResource("ShaderMaterial_obn3w")
texture = ExtResource("6_pww24")

[node name="Item" type="Node2D" parent="."]

[connection signal="mouse_entered" from="IconFrame/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="IconFrame/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="PriceSign/Area2D" to="PriceSign" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="PriceSign/Area2D" to="PriceSign" method="_on_area_2d_mouse_exited"]
